--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -7,10 +7,8 @@
   </head>
   <body>
 
-<p>This example calls a function which outputs "Hello World" in a p element with id="demo".</p>
-
-<p id="demo"></p>
-
+    <canvas id="tictactoe"> </canvas>
+    <p id="message"> welcome to tictactoe </p>
 
     <script src="script.js"></script>
 
