adding mouse events

--- a/tictactoe/index.html
+++ b/tictactoe/index.html
@@ -8,7 +8,7 @@
   <body>
 
     <canvas id="tictactoe"> </canvas>
-    <p id="message"> welcome to tictactoe </p>
+    <p id="message"> Welcome to Tic Tac Toe GAME </p>
 
     <script src="script.js"></script>
 
