display the memory board

--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -9,7 +9,7 @@
 
     <canvas id="memorygame"> </canvas>
     <p id="message"> Welcome to Memory Game</p>
-
+    <div id="memory_board"></div>
     <script src="script.js"></script>
 
   </body>
