--- a/cardflip/index.html
+++ b/cardflip/index.html
@@ -2,9 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>card flip animation</title>
+    <link href="style.css" rel="stylesheet">
   </head>
   <body>
+    <p> card flip animation</p>
+    <div class="container">
 
+    </div>
   </body>
 </html>
