--- a/cardflip/index.html
+++ b/cardflip/index.html
@@ -8,7 +8,14 @@
   <body>
     <p> card flip animation</p>
     <div class="container">
-
+      <div class="card">
+        <div class="face front">
+          <img src="image.jpg">
+        </div>
+        <div class="face back">
+          <img src="cardflip.jpg">
+        </div>
+     </div>
     </div>
   </body>
 </html>
