--- a/cardflip/index.html
+++ b/cardflip/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet">
   </head>
   <body>
-    <p> card flip animation</p>
+    <p> Card Flip Animation</p>
     <div class="container">
       <div class="card">
         <div class="face front">
