--- a/timecalc/index.html
+++ b/timecalc/index.html
@@ -8,8 +8,8 @@
   <body>
 
     <p id="message"> Calculate Time Elapsed </p>
-
     <script src="script.js"></script>
+    <button onclick="start()">Start</button>
 
   </body>
 </html>
