--- a/timecalc/index.html
+++ b/timecalc/index.html
@@ -10,6 +10,7 @@
     <p id="message"> Calculate Time Elapsed </p>
     <script src="script.js"></script>
     <button onclick="start()">Start</button>
+    <button onclick="end()">End</button>
 
   </body>
 </html>
