display click me button

--- a/memory_card_2/index.html
+++ b/memory_card_2/index.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <p id="message"> Welcome to Memory card GAME </p>
-    <canvas id="memorycard"> </canvas>
+    <canvas id="memorycard">
+    </canvas>
+    <button type="button" name="clickme" onclick="myFunction()"> click me</button>
 
     <script src="script.js"></script>
   </body>
