--- a/memory_card_2/index.html
+++ b/memory_card_2/index.html
@@ -7,9 +7,11 @@
   </head>
   <body>
     <p id="message"> Welcome to Memory card GAME </p>
+    <p id="Clock">Clock</p>
     <canvas id="memorycard">
     </canvas>
     <button type="button" name="clickme" onclick="myFunction()"> click me</button>
+    <button type="button" name="clock" onclick="myClock()"> time starts</button>
 
     <script src="script.js"></script>
   </body>
