--- a/memory_card_2/index.html
+++ b/memory_card_2/index.html
@@ -12,6 +12,7 @@
     </canvas>
     <button type="button" name="clickme" onclick="myFunction()"> click me</button>
     <button type="button" name="clock" onclick="myClock()"> time starts</button>
+    <button type="button" name="gameover" onclick="myGameOver()"> game over</button>
 
     <script src="script.js"></script>
   </body>
