--- a/memory_card_2/index.html
+++ b/memory_card_2/index.html
@@ -7,11 +7,10 @@
   </head>
   <body>
     <p id="message"> Welcome to Memory card GAME </p>
-    <p id="Clock">Clock</p>
+    <p id="Clock">Clock gets displayed once the game starts</p>
     <canvas id="memorycard">
     </canvas>
-    <button type="button" name="clock" onclick="myClock()"> display clock</button>
-    <button type="button" name="clock" onclick="myClock2()"> game starts</button>
+    <button type="button" name="clock" onclick="gameStart()"> game starts</button>
     <button type="button" name="gameover" onclick="myGameOver()"> game over</button>
 
     <script src="script.js"></script>
