--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <p id="message"> Welcome to Memory Game</p>
+    <p id="Clock">Clock gets displayed once the game starts</p>
     <div id="memory_board"></div>
+    <button type="button" name="clock" onclick="gameStart()">Start Game</button>
+    <button type="button" name="gameover" onclick="myGameOver()"> Game Over</button>
     <script src="script.js"></script>
 
   </body>
