--- a/memory_game/index.html
+++ b/memory_game/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <p id="message"> Welcome to Memory Game</p>
-    <p id="Clock">Clock gets displayed once the game starts</p>
+    <p id="Clock">Click on the tile to start the game</p>
     <div id="memory_board"></div>
     <script src="script.js"></script>
 
