--- a/quiz/index.html
+++ b/quiz/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <p> Welcome to Quiz Game</p>
     <script src="script.js"></script>
   </body>
 </html>
