my quiz function

--- a/quiz/index.html
+++ b/quiz/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <p> Welcome to Quiz Game</p>
+    <button type="button" name="button" onclick="myQuiz()">Click here to start the quiz</button>
     <script src="script.js"></script>
   </body>
 </html>
