--- a/balldodge_game/index.html
+++ b/balldodge_game/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Ball Dodge Game</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <p>Welcome to Ball Dodge Game </p>
-    <script src="script.js">
-
-    </script>
+    <button type="button" name="button" onclick="startGame()"> ClickMe</button>
+    <script src="script.js">  </script>
   </body>
 </html>
