--- a/balldodge_game/index.html
+++ b/balldodge_game/index.html
@@ -8,6 +8,7 @@
   <body>
     <p>Welcome to Ball Dodge Game </p>
     <button type="button" name="button" onclick="startGame()"> ClickMe</button>
+    <button onmousedown="accelerate(-0.2)" onmouseup="accelerate(0.05)">ACCELERATE</button>
     <script src="script.js">  </script>
   </body>
 </html>
