--- a/supermario/public/index.html
+++ b/supermario/public/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Super mario</title>
+    <script type="module" src="/js/main.js"></script>
   </head>
   <body>
-    <h1>Hello world</h1>
+    <canvas id="screen" width="640" height="640"></canvas>
   </body>
 </html>
