--- a/choices/index.html
+++ b/choices/index.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div id="main">
-
-    </div>
+    <button onclick="displayCanvas()">Try it</button>
     <script src="script.js"></script>
   </body>
 </html>
