disable button after click

--- a/choices/index.html
+++ b/choices/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button onclick="displayCanvas()">Try it</button>
+    <button id="clickme" onclick="displayCanvas()">Try it</button>
     <script src="script.js"></script>
   </body>
 </html>
