add msgg and button

--- a/choices/index.html
+++ b/choices/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button id="clickme" onclick="displayCanvas()">Try it</button>
+    <h1>Welcome to Create your own Adventure</h1>
+    <button id="clickme" onclick="displayCanvas()">Start</button>
     <script src="script.js"></script>
   </body>
 </html>
