open new window on click

--- a/canvas_exercises/index.html
+++ b/canvas_exercises/index.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+
+    <input type="button" value="Open Window" onclick="openWin()">
     <script src="script.js"></script>
+
   </body>
 </html>
