open google on click

--- a/canvas_exercises/index.html
+++ b/canvas_exercises/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
 
-    <input type="button" value="Open Window" onclick="openWin()">
+    <input type="button" value="HTML page" onclick="openWin2()">
+    <input type="button" value="Google" onclick="openWin()">
     <script src="script.js"></script>
 
   </body>
