--- a/choices/index.html
+++ b/choices/index.html
@@ -8,6 +8,8 @@
   <body>
     <h1>Welcome to Create your own Adventure</h1>
     <button id="clickme" onclick="displayCanvas()">Start</button>
+
+    <input type="button" value="Image Credits" onclick="imageCredits()">
     <script src="script.js"></script>
   </body>
 </html>
