--- a/choices/credits.html
+++ b/choices/credits.html
@@ -3,8 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>Credits</title>
+    <link rel="stylesheet" href="credit.css">
   </head>
   <body>
     <h1>Image Credits</h1>
+    <ul>
+      <li>
+        <img src="./img/pic1.jpg" alt="">   <a href="#">Link</a>
+      </li>
+      <li>
+        <img src="./img/pic2.jpg" alt="">   <a href="#">Link</a>
+      </li>
+      <li>
+        <img src="./img/pic3.jpeg" alt="">   <a href="#">Link</a>
+      </li>
+      <li>
+        <img src="./img/pic4.jpeg" alt="">   <a href="#">Link</a>
+      </li>
+      <li>
+        <img src="./img/pic5.jpg" alt="">   <a href="#">Link</a>
+      </li>
+      <li>
+        <img src="./img/grandma.jpg" alt="">   <a href="#">Link</a>
+      </li>
+
+    </ul>
   </body>
 </html>
