--- a/canvas_exercises/index.html
+++ b/canvas_exercises/index.html
@@ -9,7 +9,7 @@
 
     <input type="button" value="HTML page" onclick="openWin2()">
     <input type="button" value="Google" onclick="openWin()">
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 
   </body>
 </html>
