--- a/canvas_exercises/index.html
+++ b/canvas_exercises/index.html
@@ -9,7 +9,8 @@
 
     <input type="button" value="HTML page" onclick="openWin2()">
     <input type="button" value="Google" onclick="openWin()">
-    <script src="script3.js"></script>
+    <canvas id="myCanvas" width=800 height=800></canvas>
+    <script src="script2.js"></script>
 
   </body>
 </html>
