--- a/canvas_exercises/index.html
+++ b/canvas_exercises/index.html
@@ -9,6 +9,7 @@
 
     <input type="button" value="HTML page" onclick="openWin2()">
     <input type="button" value="Google" onclick="openWin()">
+    <button type="button" name="button" onclick="start()"> Click Me</button>
     <canvas id="myCanvas" width=800 height=800></canvas>
     <script src="script2.js"></script>
 
