--- a/tetris/index.html
+++ b/tetris/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <canvas id="tetris" width="240" height="400"></canvas>
     <script src="script.js"></script>
   </body>
 </html>
